# cbqa-ood

./: .gitignore  README.md  TODO.md  fetch_data.sh  pyproject.toml  run_eda.sh
notebooks/: disentanglement copy.ipynb  disentanglement.ipynb  disentanglement_v2.ipynb  eda.ipynb  ood_detection.ipynb  results.ipynb
results/nq/: baselines-hard.jsonl  baselines-soft.jsonl  baselines.jsonl  ensemble5-hard-0.1-token.jsonl  ensemble5-hard-f1.jsonl  ensemble5-hard-token.jsonl  ensemble5-hard-variationratio.jsonl  ensemble5-hard-voteentropy.jsonl  ensemble5-hard.jsonl  ensemble5-soft-1.0-token.jsonl  ensemble5-soft-token.jsonl  ensemble5-soft.jsonl  flipout-hard-f1.jsonl  flipout-hard-token.jsonl  flipout-hard.jsonl  flipout-large-bertscore.jsonl  flipout-large-f1.jsonl  flipout-large-token.jsonl  flipout-large.jsonl  flipout-soft-bertscore.jsonl  flipout-soft-f1.jsonl  flipout-soft-token.jsonl  flipout-soft.jsonl  mcdropout-hard-1.0-token.jsonl  mcdropout-hard-bertscore.jsonl  mcdropout-hard-f1.jsonl  mcdropout-hard-token.jsonl  mcdropout-hard-variationratio.jsonl  mcdropout-hard-voteentropy.jsonl  mcdropout-hard.jsonl  mcdropout-large-bertscore.jsonl  mcdropout-large-f1.jsonl  mcdropout-large-token.jsonl  mcdropout-large.jsonl  mcdropout-soft-bertscore.jsonl  mcdropout-soft-f1.jsonl  mcdropout-soft-token.jsonl  mcdropout-soft.jsonl
scratch/: bigout  eval  evaldropout  evaldropoutlarge  logdropout  logdropoutlarge  logflipout  out
scripts/: baselines.py  compute_uncertainty.py  fetch_all.sh  fetch_all_test.sh  fetch_wq_data.sh  forward.py  forwardsampling_ensemble.py  forwardsampling_mcdropout.py  forwardsequence.py  forwardsequence_ensemble.py  forwardtoken.py  forwardtoken_ensemble.py  qualitative.py  run_all_uq.sh  run_eda.sh  train_bart.py  train_ensemble.py  train_model.py
src/: download.py  eda.py  eval_bart.py  evaldropout.py  flipoutbart.py  load_ds.py  main.py  ood.py  qadataset.py  sbertdemo.py  train_bart.py
(+81 files in other folders)
