[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bayesian-torch>=0.5.0",
    "bert-score>=0.3.13",
    "datasets>=3.5.0",
    "hf-xet>=1.2.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "sentencepiece>=0.2.0",
    "tensorflow-probability>=0.25.0",
    "torch>=2.7.0",
    "transformers>=4.51.1",
    "vastai>=0.2.8",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",           # missing docstring in public module
    "CPY001",         # missing copyright
    "T201",           # using print
    "TD002",          # missing author in TODO
    "TD003",          # missing issue link for TODO
    "S311",           # use of random for cryptography
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "pep257"
